--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -16,7 +16,7 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #18bc9c;
+    color: #18bc9c; 
 }
 
 h1,
@@ -57,7 +57,7 @@ hr.star-light {
 
 hr.star-light:after {
     color: #fff;
-    background-color: #18bc9c;
+    background-color: #283448;
 }
 
 hr.star-primary {
@@ -76,7 +76,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    background: #039682;
+    background: #F87441;
 }
 
 header .container {
@@ -159,7 +159,7 @@ header .intro-text .skills {
 }
 
 .navbar-default {
-    background-color: #194558;
+    background-color: #283448;
 }
 .navbar-inverse {
     border: 0;
@@ -176,7 +176,7 @@ section h2 {
 
 section.success {
     color: #fff;
-    background: #039682;
+    background: #F87441;
 }
 
 @media(max-width:767px) {
@@ -206,7 +206,7 @@ section.success {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(3, 150, 130, 1);
+    background: #F87441;
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -260,7 +260,7 @@ section.success {
 .btn-outline:active,
 .btn-outline.active {
     border: solid 2px #fff;
-    color: #18bc9c;
+    color: #F87441;
     background: #fff;
 }
 
@@ -330,7 +330,7 @@ footer h3 {
 
 footer .footer-above {
     padding-top: 50px;
-    background-color: #194558;
+    background-color: #283448;
 }
 
 footer .footer-col {
@@ -339,7 +339,7 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #003443;
+    background-color: #19273E;
 }
 
 .btn-social {
